styles/style.css
/* ... */
.hero-intro__button-blk {
  width: 100%;
  height: 10rem;
  background-color: var(--primary-clr-blue);
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: 6rem;
}

.intro__btn-1,
.intro__btn-2 {
  padding: 1rem 2rem;
  background-color: var(--primary-clr-blue);
  color: var(--primary-clr-white);
  border: 0.01rem solid var(--primary-clr-white);
  width: 8rem;
  white-space: nowrap;
  border-radius: 0.4rem;
  font-weight: bold;
  font-size: 1.5rem;
}

.intro__btn-1 {
  background-color: var(--primary-clr-green);
  border: none;
  margin-left: -2rem;
}

.intro__btn-2 {
  margin-right: 1.5rem;
}

.hero-intro__pattern-blk {
  height: 15rem;
  width: 100%;
  display: flex;
  border-bottom-right-radius: 30rem;
  background-color: var(--primary-clr-blue);
}

.hero-intro__pattern-svg-desktop,
.hero__desktop-img {
  display: none;
}

/* THREAT AWARENESS CSS */
.main__threat-info-blk {
  margin-top: 7rem;
  width: 100%;
  min-height: 4rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: var(--primary-clr-white);
}

.threat__info {
  height: 25rem;
  width: 90%;
  display: flex;
  align-items: center;
  margin-bottom: 6rem;
}

.threat__info-txt {
  text-align: center;
  font-weight: 600;
  color: var(--primary-clr-grey);
  line-height: 3.2rem;
}

/* SMART HOME FEATURES SECTION  */
.home__features-info-blk {
  width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--primary-clr-white);
  margin-bottom: 6rem;
}

.home__features-info {
  width: 85%;
  text-align: center;
  height: 25rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-top: 5rem;
}

.home__features-info-title {
  font-size: 1.5rem;
  font-weight: bold;
  color: var(--secondary-clr-blue);
  letter-spacing: 1rem;
}

.home__features-info-heading {
  margin: 1.8rem 0;
  font-size: 3.2rem;
  color: var(--primary-clr-black);
  font-weight: bold;
}

.home__features-info-txt {
  color: var(--primary-clr-grey);
  line-height: 2.8rem;
}

/* HOME FEATURES */

.home__features-blk {
  width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 4rem;
}

.home__feature-container {
  width: 88%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 6.4rem;
}

.feature-heading {
  margin: 1.5rem 0;
  font-weight: bold;
  color: var(--primary-clr-black);
}

.feature-txt {
  text-align: center;
  font-size: 1.3rem;
  line-height: 2rem;
  color: var(--primary-clr-grey);
}

/* SMART HOME UPGRADE SECTION */
/* UPGRADE INFO */
.home__upgrade-blk {
  width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--primary-clr-white);
  margin-bottom: 6rem;
}

.home__upgrade-info-blk {
  width: 100%;
  height: 25rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.upgrade__info-blk {
  width: 95%;
  text-align: center;
}

.upgrade__info-title {
  font-size: 1.5rem;
  font-weight: bold;
  color: var(--secondary-clr-blue);
  letter-spacing: 1rem;
}

.upgrade__info-heading {
  margin: 1.8rem 0;
  font-size: 3.2rem;
  color: var(--primary-clr-black);
  font-weight: bold;
}

/* UPGRADE PHOTO */

.home__upgrade-photo-blk {
  width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--primary-clr-white);
  margin-bottom: 6rem;
}

.upgrade__photo-blk {
  width: 100%;
  z-index: 3;
}

.upgrade__photo {
  width: 100%;
}

/* UPGRADABLE */
.upgrade-blk {
  width: 100%;
  min-height: 55rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--secondary-clr-blue);
  margin-top: -20rem;
  z-index: 2;
}

.upgrade {
  width: 90%;
  height: 25rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: var(--primary-clr-white);
  margin-bottom: 3.6rem;
}

.upgrade:first-child {
  margin-top: 20rem;
}

.upgrade__img-blk {
  display: flex;
  justify-content: center;
  align-items: center;
}

.upgrade__title {
  color: var(--primary-clr-white);
  margin: 2.4rem 0 1.5rem;
  font-weight: 600;
}

.upgrade__txt {
  text-align: center;
  color: var(--primary-clr-white);
  font-size: 1.3rem;
  line-height: 2rem;
}

.upgrade__pattern-blk {
  height: 15rem;
  width: 100%;
  display: flex;
  justify-content: flex-end;
  border-bottom-left-radius: 30rem;
  background-color: var(--primary-clr-blue);
}

/* SMART HOME SERVICE SECTION  */
.home__service-blk {
  width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 18rem;
}

.home__service-info-blk {
  width: 100%;
  height: 25rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.service__info {
  width: 85%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 6.4rem;
}

.service__title {
  font-size: 1.5rem;
  font-weight: bold;
  color: var(--secondary-clr-blue);
  letter-spacing: 1rem;
}

.service__heading {
  margin: 2rem 0 1.5rem;
  font-weight: bold;
  text-align: center;
  font-size: 3.2rem;
  color: var(--primary-clr-black);
}

.service__txt {
  text-align: center;
  line-height: 2.8rem;
  color: var(--primary-clr-grey);
}

.service__img {
  margin-bottom: 5rem;
}

/* SERVICE CAROUSEL  */
.service__carousel-blk {
  width: 100%;
  min-height: 20rem;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  background-color: var(--secondary-clr-white);
}

.carousel-blk {
  width: 100%;
  min-height: 12rem;
  display: flex;
  align-items: center;
  overflow-x: scroll;
  padding: 5%;
  column-gap: 1.6rem;
  background-color: var(--primary-clr-white);
}
/* ... */

